# Nexus

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.trae/specs/initialize-nexus-mvp/: checklist.md  spec.md  tasks.md
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  001_expand_memory_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  logger.py  security.py
backend/app/models/: __init__.py  action.py  base.py  conversation.py  document.py  document_chunk.py  (+5 more)
backend/scripts/: init_db.py  migrate_memory_data.py
data/: .gitkeep
docs/: BUILD.md
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  utils.rs
src/components/: .gitkeep
src/composables/: index.ts  useApi.ts  useI18n.ts  useShortcuts.ts  useTauri.ts  useTheme.ts
src/layouts/: MainLayout.vue  index.ts
src/router/: index.ts
src/stores/: actions.ts  chat.ts  documents.ts  index.ts  memory.ts  models.ts  settings.ts
src/types/: index.ts
src/views/: ChatView.vue  HomeView.vue  ModelsView.vue  NotFoundView.vue  SettingsView.vue
(+77 files in other folders)
